--- a/packages/mdxui/tsconfig.json
+++ b/packages/mdxui/tsconfig.json
@@ -3,6 +3,6 @@
   "compilerOptions": {
     "outDir": "dist"
   },
-  "include": ["src"],
+  "include": ["components"],
   "exclude": ["dist", "build", "node_modules"]
 }
