--- a/.github/workflows/changesets.yml
+++ b/.github/workflows/changesets.yml
@@ -48,7 +48,7 @@ jobs:
           title: "chore(release): version packages"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          # NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
   check:
     name: Check Changeset
