--- a/packages/mdxld/package.json
+++ b/packages/mdxld/package.json
@@ -2,8 +2,12 @@
   "name": "mdxld",
   "type": "module",
   "version": "0.1.0",
+  "bin": {
+    "mdxld": "./dist/cli.js"
+  },
   "dependencies": {
-    "next-mdx-remote-client": "^2.1.2"
+    "next-mdx-remote-client": "^2.1.2",
+    "commander": "^12.1.0"
   },
   "devDependencies": {
     "vitest": "^3.1.4"
