feat: add mdx remote utilities and mdxdb watch

--- a/packages/mdxdb/package.json
+++ b/packages/mdxdb/package.json
@@ -31,6 +31,7 @@
     "tsx": "^4.19.4",
     "typescript": "^5.8.3",
     "velite": "^0.2.4",
-    "vitest": "^3.1.4"
+    "vitest": "^3.1.4",
+    "chokidar": "^3.6.0"
   }
 }
