--- a/packages/mdxe/package.json
+++ b/packages/mdxe/package.json
@@ -6,7 +6,8 @@
     "mdxui": "workspace:*",
     "next": "^15.3.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "next-mdx-remote-client": "^2.1.2"
   },
   "devDependencies": {
     "vitest": "^3.1.4"
