--- a/packages/mdxld/package.json
+++ b/packages/mdxld/package.json
@@ -3,6 +3,7 @@
   "type": "module",
   "version": "0.1.0",
   "dependencies": {
+    "@mdxld/schema": "^0.1.0",
     "next-mdx-remote-client": "^2.1.2",
     "schema-dts": "^1.1.2"
   },
