--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "turbo run test",
     "check-types": "turbo run check-types",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "generate-schema": "tsx scripts/generate-schema-mdx.ts",
+    "generate:schema": "tsx scripts/generate-schema-mdx.ts",
     "version": "changeset version",
     "release": "turbo run build && changeset publish"
   },
@@ -18,7 +18,8 @@
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "tsx": "^4.19.4",
-    "turbo": "^2.5.3"
+    "turbo": "^2.5.3",
+    "vitest": "^3.1.4"
   },
   "packageManager": "pnpm@8.15.6",
   "engines": {
