chore: simplified package folder structure

--- a/packages/mdxdb/fs/tsconfig.json
+++ b/packages/mdxdb/fs/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "../../tsconfig.json",
+  "extends": "../../../tsconfig.json",
   "compilerOptions": {
     "outDir": "./dist/lib", // Output JS files to dist/lib
     "rootDir": "./lib",     // Only include files from lib directory
