--- a/examples/ideas/package.json
+++ b/examples/ideas/package.json
@@ -8,7 +8,7 @@
     "./ideas": "./.mdx/mdx.js"
   },
   "scripts": {
-    "build": "mdxld build -s src -o .mdx"
+    "build": "mdxld build"
   },
   "dependencies": {
     "mdxld": "workspace:*"
