--- a/.github/workflows/pkg-pr-new.yml
+++ b/.github/workflows/pkg-pr-new.yml
@@ -21,5 +21,4 @@ jobs:
       - name: Build
         run: pnpm build
 
-      - run: pnpm dlx pkg-pr-new publish './packages/*'
-      - run: pnpm dlx pkg-pr-new publish './packages/mdxdb/*'
+      - run: pnpm dlx pkg-pr-new publish './packages/{*,mdxdb/*}'
