tests: updated mdxai tests

--- a/turbo.json
+++ b/turbo.json
@@ -23,7 +23,8 @@
       "persistent": true
     },
     "test": {
-      "dependsOn": ["^test"]
+      "dependsOn": ["^test"],
+      "inputs": ["$TURBO_DEFAULT$", "vitest.config.ts", ".env*"]
     }
   }
 }
