--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@changesets/cli": "^2.29.4",
     "@types/node": "^22.15.21",
+    "dotenv": "^16.5.0",
     "globby": "^14.1.0",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
