--- a/packages/mdxe/tsconfig.json
+++ b/packages/mdxe/tsconfig.json
@@ -13,6 +13,6 @@
   "include": ["src/**/*"],
   "exclude": ["node_modules"],
   "references": [
-    { "path": "../mdxui" }
+    { "path": "../mdxui/core" }
   ]
 }
