--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "turbo run lint",
     "test": "turbo run test",
     "check-types": "turbo run check-types",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,md}\"",
     "generate:schema": "tsx scripts/generate-schema-mdx.ts",
     "version": "changeset version",
     "release": "turbo run build && changeset publish",
