--- a/examples/startups/package.json
+++ b/examples/startups/package.json
@@ -3,15 +3,9 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "tsc",
-    "start": "node dist/index.js"
+    "build": "mdxe build"
   },
   "dependencies": {
-    "ideas-example": "workspace:*",
-    "react": "^18.2.0"
-  },
-  "devDependencies": {
-    "@types/react": "^18.2.43",
-    "typescript": "^5.3.3"
+    "mdxe": "workspace:*"
   }
 }
