chore: simplified startup scripts

--- a/examples/startups/package.json
+++ b/examples/startups/package.json
@@ -3,7 +3,12 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "mdxe build"
+    "dev": "mdxe",
+    "exec": "mdxe",
+    "build": "mdxe build",
+    "start": "mdxe start",
+    "lint": "mdxe lint",
+    "test": "mdxe test"
   },
   "dependencies": {
     "mdxe": "workspace:*"
