--- a/packages/mdxdb/fs/package.json
+++ b/packages/mdxdb/fs/package.json
@@ -4,7 +4,7 @@
   "version": "0.1.0",
   "dependencies": {
     "@ai-sdk/openai": "^1.3.22",
-    "@mdxdb/core": "^0.1.0",
+    "@mdxdb/core": "workspace:*",
     "@payloadcms/db-sqlite": "^3.38.0",
     "@types/micromatch": "^4.0.6",
     "add": "^2.0.6",
