--- a/demo/voice/package.json
+++ b/demo/voice/package.json
@@ -1,20 +1,23 @@
 {
   "name": "voice",
   "version": "0.0.1",
+  "type": "module",
   "private": true,
   "description": "OpenAI Realtime audio streaming example with React Ink",
   "scripts": {
-    "start": "tsx realtime-ink.tsx"
+    "start": "tsx cli.tsx"
   },
   "dependencies": {
+    "dotenv": "^16.5.0",
     "ink": "^4.4.1",
     "mic": "^2.1.2",
+    "openai": "^4.103.0",
     "react": "^18.2.0",
-    "speaker": "^0.5.4",
+    "speaker": "^0.5.5",
     "ws": "^8.14.2"
   },
   "devDependencies": {
-    "tsx": "^4.6.2",
-    "@types/ws": "^8.5.10"
+    "@types/ws": "^8.5.10",
+    "tsx": "^4.6.2"
   }
 }
