--- a/packages/mdxai/package.json
+++ b/packages/mdxai/package.json
@@ -28,6 +28,8 @@
     "p-queue": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "remark-parse": "^11.0.0",
+    "unified": "^11.0.5",
     "wav": "^1.0.2",
     "yaml": "^2.8.0",
     "zod": "^3.21.4"
