refactor: simplify extract function

--- a/packages/mdxai/package.json
+++ b/packages/mdxai/package.json
@@ -6,6 +6,7 @@
     "mdxai": "./dist/cli.js"
   },
   "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "scripts": {
     "build": "tsup",
     "start": "ts-node src/cli.ts",
