--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "dev": "turbo run dev",
     "lint": "turbo run lint",
     "test": "turbo run test",
+    "test:all": "vitest run --exclude '**/node_modules/**' --exclude '**/dist/**' --exclude '**/build/**' --exclude '**/.next/**' --exclude '**/examples/**/node_modules/**'",
+    "test:packages": "pnpm --filter \"./packages/**\" test",
     "check-types": "turbo run check-types",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,md}\"",
     "generate:schema": "tsx scripts/generate-schema-mdx.ts",
