--- a/.github/workflows/fix-main-lockfile.yml
+++ b/.github/workflows/fix-main-lockfile.yml
@@ -68,10 +68,10 @@ jobs:
           
           # Try to regenerate the lockfile with increased verbosity for better debugging
           echo "Running pnpm install to regenerate lockfile..."
-          pnpm install --no-frozen-lockfile --filter=!voice || {
+          pnpm install --no-frozen-lockfile || {
             echo "::error::Failed to regenerate lockfile with standard install"
             echo "Trying with more verbose output..."
-            pnpm install --no-frozen-lockfile --filter=!voice --loglevel=debug
+            pnpm install --no-frozen-lockfile --loglevel=debug
           }
           
           # Verify the lockfile was created successfully
