--- a/examples/minimal/package.json
+++ b/examples/minimal/package.json
@@ -10,14 +10,6 @@
     "lint:examples": "mdxe lint"
   },
   "dependencies": {
-    "mdxe": "workspace:*",
-    "next": "^15.3.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "rehype-stringify": "^10.0.1",
-    "remark-gfm": "^4.0.1",
-    "remark-parse": "^11.0.0",
-    "remark-rehype": "^11.1.2",
-    "unified": "^11.0.4"
+    "mdxe": "workspace:*"
   }
 }
