--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build:packages": "turbo run build --filter=\"./packages/**\"",
     "dev": "turbo run dev",
     "lint": "turbo run lint",
-    "test": "turbo run test --env-mode=loose",
+    "test": "turbo run test",
     "test:all": "vitest run --exclude '**/node_modules/**' --exclude '**/dist/**' --exclude '**/build/**' --exclude '**/.next/**' --exclude '**/examples/**/node_modules/**'",
     "test:packages": "pnpm --filter \"./packages/**\" test",
     "check-types": "turbo run check-types",
