--- a/packages/mdxui/safari/manifest.json
+++ b/packages/mdxui/safari/manifest.json
@@ -20,29 +20,17 @@
         "https://*/*"
       ],
       "js": [
-        "dist/contentScripts/fileRenderer.js"
+        "contentScripts/fileRenderer.js"
       ],
       "run_at": "document_end"
     }
   ],
   "web_accessible_resources": [
-    {
-      "resources": [
-        "dist/contentScripts/monacoIntegration.js",
-        "dist/utils/fileTypeDetection.js"
-      ],
-      "matches": [
-        "file://*/*",
-        "http://*/*",
-        "https://*/*"
-      ]
-    }
+    "contentScripts/monacoIntegration.js",
+    "utils/fileTypeDetection.js"
   ],
   "action": {
     "default_title": "MDX Safari Extension",
     "default_popup": "popup.html"
-  },
-  "background": {
-    "service_worker": "dist/background.js"
   }
 }
