--- a/packages/mdxui/safari/tsconfig.json
+++ b/packages/mdxui/safari/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "outDir": "dist",
     "rootDir": ".",
-    "types": ["chrome", "node"]
+    "types": ["chrome", "node", "monaco-editor"]
   },
   "include": [
     "src/**/*",
